objects/AcctSeed__Import_Field__c/AcctSeed__Import_Field__c.object-meta.xml
<CustomObject>
    <label>Import Field</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>