objects/AcctSeed__Import_Field__c/fields/AcctSeed__Column_Index__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Column_Index__c</fullName>
    <label>Column Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>