objects/AcctSeed__Import_Field__c/fields/AcctSeed__Import_Template__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Import_Template__c</fullName>
    <label>Import Template</label>
    <referenceTo>AcctSeed__Import_Template__c</referenceTo>
    <relationshipLabel>Import Fields</relationshipLabel>
    <relationshipName>Import_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>