objects/AcctSeed__Import_Field__c/fields/AcctSeed__Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>