objects/AcctSeed__Import_Field__c/fields/AcctSeed__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>