objects/AcctSeed__Import_Field__c/validationRules/AcctSeed__Header.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Header</fullName>
    <active>true</active>
    <errorConditionFormula>AcctSeed__Import_Template__r.AcctSeed__Headers__c &amp;&amp; ISBLANK( AcctSeed__Column_Header__c )</errorConditionFormula>
    <errorDisplayField>AcctSeed__Column_Header__c</errorDisplayField>
    <errorMessage>You must assign a Column Header</errorMessage>
</ValidationRule>