objects/AcctSeed__Import_Field__c/validationRules/AcctSeed__Index.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Index</fullName>
    <active>true</active>
    <errorConditionFormula>!AcctSeed__Import_Template__r.AcctSeed__Headers__c &amp;&amp; ISBLANK( AcctSeed__Column_Index__c )</errorConditionFormula>
    <errorDisplayField>AcctSeed__Column_Index__c</errorDisplayField>
    <errorMessage>You must assign a Column Index</errorMessage>
</ValidationRule>