objects/AcctSeed__Import_Field__c/validationRules/AcctSeed__One_Parent_Key.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__One_Parent_Key</fullName>
    <active>false</active>
    <errorConditionFormula>AcctSeed__Import_Template__r.AcctSeed__Total_Key_Fields__c &gt; 1</errorConditionFormula>
    <errorMessage>There can only be one field specified as the Parent Key Field</errorMessage>
</ValidationRule>