objects/AcctSeed__Import_Field__c/validationRules/AcctSeed__Parent_Key.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Parent_Key</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(AcctSeed__Target_Object__c) !=  TEXT(AcctSeed__Import_Template__r.AcctSeed__Parent__c) &amp;&amp;  NOT(ISNULL( AcctSeed__Key_Field__c ))</errorConditionFormula>
    <errorDisplayField>AcctSeed__Target_Object__c</errorDisplayField>
    <errorMessage>The Parent Key Field must be on the Parent Object</errorMessage>
</ValidationRule>